# teste-backend-amicci

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  fly.toml  manage.py  pyproject.toml  release.sh
amicci/: asgi.py  settings.py  swagger.py  urls.py  wsgi.py
briefings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
briefings/migrations/: 0001_initial.py  0002_alter_category_options_briefing_owner_category_owner.py
core/: managers.py  models.py  permissions.py  serializers.py  tests.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_managers.py
retailers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
retailers/migrations/: 0001_initial.py  0002_retailer_owner.py
seeds/: 0001_Briefing_Category.json
vendors/: admin.py  models.py  serializers.py  urls.py  views.py
vendors/migrations/: 0001_initial.py  0002_vendor_owner.py
